# AgenticDemo

./: .example.env  .gitignore  Makefile  README.md  pyproject.toml
backend/: agents.py  config.py  database.py  evaluate.py  ingest.py  main.py  schema.py  schemas.py  server.py  tools.py
backend/evaluation/: chain.py  generate.py  run.py  runnable.py
backend/notebooks/: merger_retriever.ipynb  open.xml  pgvector.ipynb  sql_poc.ipynb  unstructured-processing-poc.ipynb
backend/router/: chat.py  evaluation.py
backend/schema/: document.py  embedding.py  evaluation.py  foo.py  recommendation.py
backend/scripts/: create_embeddings.py  seed_data.py
backend/tools/: knowledge_retriever.py  pdf_entity_recognition.py
data/train/: source.py
migrations/: env.py
